@@ -42,3 +42,9 @@ zone "example" {
 	file "example.db";
 	allow-update { key update.example.; 10.53.0.3; };
 };
+
+zone "example2" {
+	type master;
+	file "example2.db";
+	allow-update { key sig0.example2.; };
+};
